class Ingredient {
  constructor(restaurant, name, type, unit) {
    this.restaurant = restaurant
    this.name = name
    this.type = type
    this.unit = unit
  }
}

module.exports = Ingredient
