@startuml cof-f-resh class diagram



class User {
name : String
type : String
createOrder (Order)
changeOrder (Order)
addMenuItem (MenuItem)
addIngredient (Ingredient)
inputSalesStockData (Sales, Stock)
}

' class Customer {
' name : String
' type : String
' createOrder (Order)
' changeOrder (Order)
' addMenuItem (MenuItem)
' addIngredient (Ingredient)
' inputSalesStockData (Sales, Stock)
' }

package Order {
class Order {
customer : User
restaurant : Restaurant
type : String
status : String
targetDate : Date
targetTime : Time
items : Array<OrderElement>
Details()
}

class OrderElement {
name : MenuItem
quantity : number

}
}

package Restaurant {
class Restaurant {
  name : String
  owner : User
  address : String
  menu : Array<MenuItem>
  orderList : Array<Order>
  ingredients : Array<Ingredient>
  salesStock Data : Array<Sales, Stock>
}
class MenuItem{
name : String
restaurant : Restaurant
type : String
subType : String
price : number
recipe :Array<Ingredients>
Details()
}

class Ingredients {
name : String
restaurant : Restaurant
unit : String
type : String
}
}

User - Restaurant
User "1" o--> "0..*" Order : create, cancel, confirm, reject, complete
Order "1" *- "0..*" OrderElement
OrderElement "1" --- "1" MenuItem
Restaurant "1" o- "0..*" Order
Restaurant "1" *--- "0..*" MenuItem
Restaurant "1" *-- "0..*" Ingredients
MenuItem "1" - "0..*" Ingredients

@enduml









class Person {
  name: string
  age: number

  photos : [Photo]
  construstor (name: string, age: number)
  addPhoto(photo: Photo)
  likePhoto(photo: Photo)
}
class Photo {
filename : string

likedBy  : [Person]
constructor (fileName: string)
}

Person "1" o-----> "0..*" Photo : keeps, likes
Photo -----> "0..*" Person : liked by
